// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of a row 1`] = `
<div
  className="mui-node-row"
>
  <div>
    {"level":0,"nodeIndex":0,"tree":[{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"}]}
  </div>
  <div>
    {"node":{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"}}
  </div>
  <div>
    {"node":{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"},"nodeIndex":0,"selected":false,"subtitle":"Foo subtitle","title":"Foo"}
  </div>
</div>
`;

exports[`Render of row with custom style 1`] = `
<div
  className="mui-node-row"
  style={
    Object {
      "width": "10px",
    }
  }
>
  <div>
    {"level":0,"nodeIndex":0,"tree":[{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"}]}
  </div>
  <div>
    {"node":{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"}}
  </div>
  <div>
    {"node":{"childrenCount":0,"expanded":false,"id":"foo","level":0,"parent":null,"title":"Foo","subtitle":"Foo subtitle"},"nodeIndex":0,"selected":false,"subtitle":"Foo subtitle","title":"Foo"}
  </div>
</div>
`;
